# quiet_room_build

./: .gitignore  FIREBASE_MIGRATION_README.md  README.md  TAURI_MIGRATION_SUMMARY.md  TAURI_SETUP.md  design.json  index.html  install_tauri.bat  install_tauri.sh  package-lock.json  package.json  pnpm-lock.yaml  run_app.bat  test-image.mjs  test-sharp.js  vite.config.ts
.github/workflows/: tauri-macos.yml
public/: image-viewer.html
quiet_room_chrome_extension/: README.md  background.js  content.js  install.md  manifest.json  popup.html  popup.js  test.html
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: mod.rs  moodboard_upload.rs  moodboards.rs  notes.rs  phone_upload.rs  photo_journal.rs  storage.rs  system.rs
src-tauri/src/commands/references/: crud.rs  files.rs  folders.rs  mod.rs  notes.rs  tags.rs
src-tauri/src/server/: mod.rs  network.rs  phone_page.rs  phone_server.rs  router.rs  token.rs  types.rs
src-tauri/src/server/handlers/: mod.rs  phone.rs  photo_journal.rs  references.rs
src-tauri/wix/: main.wxs
src/components/Idea_vault/: Idea_vault.css  Idea_vault.tsx  README.md
src/components/Inspiration/: Focus_mode.css  Focus_mode.tsx  Inspiration.css  Inspiration.tsx  (+3 more)
src/config/: dataConfig.ts
src/services/: imageCacheService.ts  moodboardService.ts  notesService.ts  photoJournalService.ts  referencesService.ts  tauriService.ts
src/utils/: performanceMonitor.ts
(+119 files in other folders)
