[package]
name = "drawing-inspo"
version = "1.0.0"
description = "Drawing Inspiration App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build-dependencies]
# tauri-build = { version = "1.5", features = [], default-features = false }

[dependencies]
tauri = { version = "1.5", features = [ "window-create", "window-hide", "http-all", "window-maximize", "dialog-save", "dialog-open", "path-all", "window-minimize", "window-close", "window-unminimize", "window-show", "shell-open", "fs-all", "window-unmaximize", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
kamadak-exif = "0.5"
axum = { version = "0.6", features = ["multipart"] }
http = "0.2"
tower-http = { version = "0.4", features = ["cors"] }
local-ip-address = "0.6.10"
once_cell = "1.21.3"
socket2 = "0.6.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
